[package]
name = "crav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#audioviz = { git = "https://github.com/BrunoWallner/audioviz", branch = "main", features = ["serde"] }
audioviz = { path = "../audioviz", features = ["serde"] }

cpal = "0.13.4"
gag = "1.0.0"
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

# for interpolation in color gradients
splines = "4.0.3"

# universal wgpu backend
winit = "0.25"
wgpu = "0.11"
bytemuck = { version = "1.4", features = [ "derive" ] }
pollster = "0.2"
winit_input_helper = "0.10.0"

env_logger = "0.9"

# termion backend for unix targets
[target.'cfg(target_family = "unix")'.dependencies]
termion = "1.5.6"

# crossterm backend for windows targets
[target.'cfg(target_family = "windows")'.dependencies]
crossterm = "0.22.1"
